[package]
name = "node-flow"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/HANDZCZ/node-flow"
description = "A crate that provides flows for nodes"
license = "MIT OR Apache-2.0"

[dependencies]
async-lock = "^3.4.1"
futures-util = { version = "^0.3.31", default-features = false }

[dev-dependencies]
tokio = { version = "^1.48.0", features = ["full"] }
