[package]
name = "node-flow"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/HANDZCZ/node-flow"
description = "Runtime-agnostic, asynchronous node-based framework for building composable flows"
license = "MIT OR Apache-2.0"

[dependencies]
async-lock = { version = "^3.4.1", optional = true }
async-trait = { version = "^0.1.89", optional = true }
futures-util = { version = "^0.3.31", default-features = false }
rand = { version = "^0.9.2", optional = true }
tynm = { version = "^0.2.0", optional = true }

[dev-dependencies]
tokio = { version = "^1.48.0", features = ["full"] }

[features]
default = ["storage_impls", "d2describer"]
storage_impls = ["local_storage_impl", "shared_storage_impl"]
local_storage_impl = []
shared_storage_impl = ["dep:async-lock"]
describe_get_name_simple = ["dep:tynm"]
d2describer = ["describe_get_name_simple", "dep:rand"]
boxed_node = ["dep:async-trait"]

[package.metadata.docs.rs]
all-features = true
